# Meta-Hackathon-openenv

./: .dockerignore  .env.example  .gitignore  Dataset.json  Dockerfile  README.md  agent_contract.py  app.py  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_grader.py
server/: app.py
