[project]
name = "security-log-openenv"
version = "0.1.0"
description = "Security log analysis OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "server.app:app"