[project]
name = "security-log-openenv"
version = "0.1.0"
description = "Security log analysis OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "requests==2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"